--- a/src/login/index.html
+++ b/src/login/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AQI Monitor - Login</title>
-  <link rel="stylesheet" href="style.css" />
+  <!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="login-container">
@@ -14,8 +15,9 @@
       <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-    <div class="register">
-      Don't have an account? <a href="/register">Register here</a>
+    <div class="links">
+      <p>Don't have an account? <a href="/register">Register here</a></p>
+      <p><a href="/forgot-password">Forgot your password?</a></p>
     </div>
   </div>
 </body>
