--- a/src/AQI_Ranking.html
+++ b/src/AQI_Ranking.html
@@ -411,7 +411,7 @@
   <main>
     <header class="page-header">
         <h1>Mumbai Air Quality Index Ranking</h1>
-        <p>Tracking the Air We Breathe</p>
+        <p>Monitoring the Air We Breathe</p>
     </header>
 
     <div class="grid-container">
